--- a/src/app/core/components/marios-card/marios-card.component.scss
+++ b/src/app/core/components/marios-card/marios-card.component.scss
@@ -95,6 +95,7 @@ $color-gray-light: #a1a1a1;
 .click-label {
   color: $color-text-light;
   font-size: 2rem;
+  letter-spacing: 0.2rem;
   font-weight: $font-weight-bold;
 }
 
